--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,19 @@
         android:layout_height="match_parent"
         >
 
-        <ImageButton
-            android:id="@+id/ib_Start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <Button
+            android:id="@+id/btn_Start"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/logo" />
-
-
-
+            android:background="@drawable/button_start_shape"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
+            android:text="EAT"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
