--- a/app/src/main/res/layout/list_element_group.xml
+++ b/app/src/main/res/layout/list_element_group.xml
@@ -1,23 +1,101 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:weightSum="1"
-    android:id="@+id/list_item_groups"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.2"
-        android:text="2 / 4"
-        android:textSize="25dp"
-        android:textAlignment="center"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="MO | DI | MI | DO "
-        android:textSize="25dp"
-        android:textAlignment="center"/>
+    <android.support.v7.widget.CardView
+        android:id="@+id/cv_Groups"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:elevation="3dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/btn_Room"
+                android:layout_width="match_parent"
+                android:layout_height="80sp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:gravity="center"
+                android:scaleType="fitXY"
+                android:text="2/4"
+                android:textSize="36sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="20sp"
+                android:layout_below="@+id/btn_Room"
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <Button
+                    android:id="@+id/btn_Mo"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:text="MO"
+                    android:textColor="@color/white"
+                    android:layout_weight="0.1428571428571429"
+                    android:background="@drawable/weekdaybutton_border_green"
+                    />
+
+                <Button
+                    android:id="@+id/btn_Di"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:text="DI"
+                    android:textColor="@color/white"
+                    android:layout_weight="0.1428571428571429"
+                    android:background="@drawable/weekdaybutton_border_red" />
+                <Button
+                    android:id="@+id/btn_Mi"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:text="MI"
+                    android:textColor="@color/white"
+                    android:layout_weight="0.1428571428571429"
+                    android:background="@drawable/weekdaybutton_border_green" />
+                <Button
+                    android:id="@+id/btn_Do"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:text="DO"
+                    android:textColor="@color/white"
+                    android:layout_weight="0.1428571428571429"
+                    android:background="@drawable/weekdaybutton_border_green" />
+                <Button
+                    android:id="@+id/btn_Fr"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:text="FR"
+                    android:textColor="@color/white"
+                    android:layout_weight="0.1428571428571429"
+                    android:background="@drawable/weekdaybutton_border_red" />
+                <Button
+                    android:id="@+id/btn_Sa"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:text="SA"
+                    android:textColor="@color/white"
+                    android:layout_weight="0.1428571428571429"
+                    android:background="@drawable/weekdaybutton_border_red" />
+                <Button
+                    android:id="@+id/btn_So"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:text="SO"
+                    android:textColor="@color/white"
+                    android:layout_weight="0.1428571428571429"
+                    android:background="@drawable/weekdaybutton_border_red" />
+
+
+            </LinearLayout>
+
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
