--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,14 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!--Weekdays Colors Cardview-->
+    <color name="grey">#d1d1d1</color>
+    <color name="green">#0dff00</color>
+    <color name="red">#ff0000</color>
+    <color name="white">#ffffff</color>
+
+
+
+
 </resources>
