--- a/app/src/main/res/layout/content_match.xml
+++ b/app/src/main/res/layout/content_match.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/green"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ActivityMatch"
     tools:showIn="@layout/activity_match">
 
@@ -13,4 +15,5 @@
         android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:scrollbars="vertical" />
+
 </RelativeLayout>
