--- a/app/src/main/res/layout/list_element_group.xml
+++ b/app/src/main/res/layout/list_element_group.xml
@@ -31,64 +31,75 @@
                 android:orientation="horizontal"
                 android:weightSum="1">
 
-                <Button
-                    android:id="@+id/btn_Mo"
+                <TextView
+                    android:id="@+id/tv_Mo"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:text="MO"
-                    android:textColor="@color/white"
                     android:layout_weight="0.1428571428571429"
                     android:background="@drawable/weekdaybutton_border_green"
-                    />
+                    android:gravity="center"
+                    android:text="MO"
+                    android:textColor="@color/white" />
 
-                <Button
-                    android:id="@+id/btn_Di"
+                <TextView
+                    android:id="@+id/tv_Di"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
+                    android:layout_weight="0.1428571428571429"
+                    android:background="@drawable/weekdaybutton_border_red"
+                    android:gravity="center"
                     android:text="DI"
-                    android:textColor="@color/white"
-                    android:layout_weight="0.1428571428571429"
-                    android:background="@drawable/weekdaybutton_border_red" />
-                <Button
-                    android:id="@+id/btn_Mi"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/tv_Mi"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
+                    android:layout_weight="0.1428571428571429"
+                    android:background="@drawable/weekdaybutton_border_green"
+                    android:gravity="center"
                     android:text="MI"
-                    android:textColor="@color/white"
-                    android:layout_weight="0.1428571428571429"
-                    android:background="@drawable/weekdaybutton_border_green" />
-                <Button
-                    android:id="@+id/btn_Do"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/tv_Do"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
+                    android:layout_weight="0.1428571428571429"
+                    android:background="@drawable/weekdaybutton_border_green"
+                    android:gravity="center"
                     android:text="DO"
-                    android:textColor="@color/white"
-                    android:layout_weight="0.1428571428571429"
-                    android:background="@drawable/weekdaybutton_border_green" />
-                <Button
-                    android:id="@+id/btn_Fr"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/tv_Fr"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
+                    android:layout_weight="0.1428571428571429"
+                    android:background="@drawable/weekdaybutton_border_red"
+                    android:gravity="center"
                     android:text="FR"
-                    android:textColor="@color/white"
-                    android:layout_weight="0.1428571428571429"
-                    android:background="@drawable/weekdaybutton_border_red" />
-                <Button
-                    android:id="@+id/btn_Sa"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/tv_Sa"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
+                    android:layout_weight="0.1428571428571429"
+                    android:background="@drawable/weekdaybutton_border_red"
+                    android:gravity="center"
                     android:text="SA"
-                    android:textColor="@color/white"
-                    android:layout_weight="0.1428571428571429"
-                    android:background="@drawable/weekdaybutton_border_red" />
-                <Button
-                    android:id="@+id/btn_So"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/tv_So"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:text="SO"
-                    android:textColor="@color/white"
                     android:layout_weight="0.1428571428571429"
-                    android:background="@drawable/weekdaybutton_border_red" />
+                    android:background="@drawable/weekdaybutton_border_red"
+                    android:gravity="center"
+                    android:text="SO"
+                    android:textColor="@color/white" />
 
 
             </LinearLayout>
