--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -8,11 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:fitsSystemWindows="true"
-        android:scaleType="centerCrop"
-        />
+        android:scaleType="centerCrop" />
+
     <TextView
         android:id="@+id/tv_profileName"
-        android:text="Design KING"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_above="@android:id/list"
@@ -20,8 +19,49 @@
         android:gravity="center_vertical"
         android:maxLines="1"
         android:paddingLeft="16dp"
+        android:text="Design KING"
         android:textColor="#fff"
         android:textSize="22sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40sp"
+        android:background="#50000000"
+        />
+    <TextView
+        android:id="@+id/tv_rating"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:textColor="#fff"
+        android:gravity="center_vertical"
+        android:text="Bewertungen: "
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/tv_ratingCounts"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:gravity="center_vertical"
+        android:layout_toRightOf="@+id/tv_rating"
+        android:textColor="#fff"
+        android:text="218"
+        android:textSize="20sp" />
+
+    <RatingBar
+        style="?android:attr/ratingBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="11dp"
+        android:isIndicator="true"
+        android:max="5"
+        android:rating="3.5"
+        android:scaleX="1"
+        android:scaleY="1"
+        android:transformPivotX="0dp"
+        android:transformPivotY="0dp" />
+
 
     <ListView
         android:id="@android:id/list"
