ChatRooms in der Firebase Datenbank erstellen Über den erstellen Button in der ActivityMatch wird in der Firebase Datenbank ein neuer room node mit der id des firebaseusers erstellt. Hier werden später alle Infos bezüglich des Essens, Umkreis usw. stehen.

--- a/app/src/main/res/layout/content_match.xml
+++ b/app/src/main/res/layout/content_match.xml
@@ -9,7 +9,7 @@
     tools:context=".ActivityMatch"
     tools:showIn="@layout/activity_match">
 
-    <Re
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_groups"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
