--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -77,6 +77,23 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_match" />
 
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/green"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context=".ActivityMatch"
+        tools:showIn="@layout/activity_match">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_groups"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:scrollbars="vertical" />
+
+    </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
