--- a/app/src/main/res/layout/rc_item_message_user.xml
+++ b/app/src/main/res/layout/rc_item_message_user.xml
@@ -3,31 +3,32 @@
     android:id="@+id/layout1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp">
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="5dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/ivChatAvatar"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:layout_marginEnd="5dp"
-        android:src="@drawable/default_avata" />
+        android:src="@drawable/default_avata"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/textContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/rounded_corner1"
         android:padding="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@id/ivChatAvatar"
-        android:layout_marginEnd="5dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_marginStart="20dp"
         android:text="Beispiel Message"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#ffffff" />
 
     <TextView
