Timestamp von Chatnachrichten in HH:mm dd:mm geändert

--- a/app/src/main/res/layout/rc_item_message_user.xml
+++ b/app/src/main/res/layout/rc_item_message_user.xml
@@ -29,7 +29,8 @@
         android:padding="10dp"
         android:text="Beispiel Message"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        />
 
     <TextView
         android:id="@+id/tv_messageTimestamp"
